[project]
name = "space-track"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "requests",  "configparser"  ]


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select= [
  'D', #pydocstyle
  'E', 'W', # pycodestyle
  'F', #pyflakes
  'I', # sort imports
  'UP', #pyupgrade
  "RUF",  # ruff dev's own rules
  "SIM", # pyflakes simplicity
  "C90", # more complexity rules
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false
